reviewer comments rev sci inst

--- a/LatticeOptics/submission_rev_sci_inst_revised/Makefile
+++ b/LatticeOptics/submission_rev_sci_inst_revised/Makefile
@@ -29,7 +29,7 @@ all: $(targets) $(subs)
 			$(project)Notes.bib
 
 diff:
-	@echo "latexdiff ../submission_pr_applied/$(project).tex $(project).tex > $(project)_diff.tex"
+	@echo "latexdiff ../submission_rev_sci_inst/$(project).tex $(project).tex > $(project)_diff.tex"
 	@latexdiff ../submission_pr_applied/$(project).tex  $(project).tex  > $(project)_diff.tex
 	@pdflatex $(project)_diff.tex
 
